plugins {
    id 'java-library'
    id 'maven-publish'
    id "io.papermc.paperweight.userdev" version "2.0.0-beta.17"
    id "com.gradleup.shadow" version "8.3.8"
}

group = 'gg.nextforge'
version = '1.0'

repositories {
    mavenCentral()
}

dependencies {
    paperweight.paperDevBundle("1.19.1-R0.1-SNAPSHOT")

    compileOnly "org.projectlombok:lombok:1.18.38"
    annotationProcessor "org.projectlombok:lombok:1.18.38"

    implementation "org.mozilla:rhino:1.7.14"
    implementation "com.google.code.gson:gson:2.10.1"
    implementation "org.bstats:bstats-bukkit:3.0.2"
    testImplementation "org.junit.jupiter:junit-jupiter:5.9.3"
    testImplementation "org.mockito:mockito-core:5.5.0"
}

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'maven-publish'
    apply plugin: 'io.papermc.paperweight.userdev'
    apply plugin: 'com.gradleup.shadow'

    repositories {
        mavenCentral()
    }

    dependencies {
        paperweight.paperDevBundle("1.19.1-R0.1-SNAPSHOT")

        compileOnly "org.projectlombok:lombok:1.18.38"
        annotationProcessor "org.projectlombok:lombok:1.18.38"

        implementation "org.mozilla:rhino:1.7.14"
        implementation "com.google.code.gson:gson:2.10.1"
        implementation "org.bstats:bstats-bukkit:3.0.2"
    }

    // Version-Injection auch in Subprojects, falls benötigt
    tasks.withType(ProcessResources).configureEach {
        filesMatching("plugin.yml") {
            expand(
                    version: project.version,
                    group: project.group,
                    name: project.name
            )
        }
    }
}

java {
    // Use Java 21
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(21))
    }
    withJavadocJar()
    withSourcesJar()
}

tasks {
    compileJava {
        options.encoding = "UTF-8"
    }

    test {
        useJUnitPlatform()
    }

    // Haupt-Versionserweiterung für plugin.yml
    processResources {
        filesMatching("plugin.yml") {
            expand(
                    version: project.version,
                    group: project.group,
                    name: project.name
            )
        }
    }
}

shadowJar {
    dependsOn(processResources)
    relocate("org.mozilla.javascript", "gg.nextforge.libraries.rhino")
    relocate("com.google.gson", "gg.nextforge.libraries.gson")
    relocate("org.bstats", "gg.nextforge.libraries.bstats")
}

publishing {
    repositories {
        mavenLocal()
    }
    publications {
        create("mavenJava", MavenPublication) {
            from components.java
            groupId = project.group
            artifactId = 'nextforge'
            version = project.version

            pom {
                name.set('NextForge-Core')
                description.set('A modern, modular, and extensible Minecraft server core software for NextForge plugins.')
            }
        }
    }
}
